--- a/onlineLibrary/pom.xml
+++ b/onlineLibrary/pom.xml
@@ -7,15 +7,69 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>onlineLibrary Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  
+  <properties>
+     <javaee.verison>7.0</javaee.verison>
+     <spring.version>4.3.6.RELEASE</spring.version>
+  </properties>
+ 
+ 
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+
+	<!-- spring -->
+
+
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-webmvc</artifactId>
+		<version>${spring.version}</version>
+	</dependency>
+
+	<!-- jstl -->
+
+	<dependency>
+		<groupId>jstl</groupId>
+		<artifactId>jstl</artifactId>
+		<version>1.2</version>
+	</dependency>
+     
+
+	<!-- java ee api -->
+
+	<dependency>
+		<groupId>javax</groupId>
+		<artifactId>javaee-api</artifactId>
+		<version>${javaee.verison}</version>
+		<scope>provided</scope>
+	</dependency>
+
+
+
+
+	<!-- junit -->
+	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>3.8.1</version>
+		<scope>test</scope>
+	</dependency>
+ 
   </dependencies>
+ 
+ 
   <build>
+  
+     <plugins>
+       <!-- latest version -->
+          <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.1</version>
+            <configuration>
+              <source>1.8</source>
+              <target>1.8</target>
+            </configuration>
+         </plugin>
+     </plugins>
     <finalName>onlineLibrary</finalName>
   </build>
 </project>
